--- a/carbon-angular-tutorial/src/styles.scss
+++ b/carbon-angular-tutorial/src/styles.scss
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~carbon-components/scss/globals/scss/styles';
+
+
+$feature-flags: (
+  grid-columns-16: true
+);
